implantando melhorias